--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/luxardOri/logo-generator#readme",
   "dependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "inquirer": "^8.2.4"
   }
 }
